fixed color of progress bar on firefox (#1705)
* fixed color of progress bar on firefox

* fix progress bar bg color

--- a/app/public/src/pages/component/game/game-shop.css
+++ b/app/public/src/pages/component/game/game-shop.css
@@ -187,7 +187,6 @@
 .game-experience .progress-bar > .my-progress {
   overflow: hidden;
   height: 100%;
-  background-color: var(--color-bg-primary);
 }
 
 #game-shop-info {
